--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   cloud_firestore: ^4.17.5
   google_sign_in: ^6.2.1
   flutter_ringtone_player: ^4.0.0
+  firebase_analytics: ^10.10.7
 
 dev_dependencies:
   flutter_test:
